--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@
 /deps
 /*.ez
 
+.envrc
 # Generate on crash by the VM
 erl_crash.dump
 
@@ -22,3 +23,5 @@ erl_crash.dump
 # secrets file as long as you replace its contents by environment
 # variables.
 /config/prod.secret.exs
+
+elm-stuff
